--- a/index.html
+++ b/index.html
@@ -1,157 +1,143 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="es">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Práctica Imperfecto Francés - 30 Preguntas</title>
-<style>
-  body {font-family: Arial, sans-serif; margin:20px; background:#f9f9f9;}
-  .question {margin-bottom:15px; padding:10px; background:white; border-radius:8px;}
-  .hidden {display:none;}
-  button {margin:5px;}
-  #score {font-weight:bold;}
-</style>
-</head>
-<body>
-
-<h1>Práctica Imperfecto Francés</h1>
-<div id="quiz"></div>
-
-<div>
-  <button id="prevBtn">Anterior</button>
-  <button id="nextBtn">Siguiente</button>
-  <button id="checkBtn">Ver resultados actuales</button>
-  <button id="refreshBtn">Reiniciar práctica</button>
-</div>
-
-<p id="score"></p>
-
-<script>
-// ==================== CONFIGURACIÓN ====================
-const questions = [
-  // --- Preguntas 1-30 ---
-  {q:"Yo (être) ... à l'école", a:"étais"},
-  {q:"Tú (avoir) ... un chien", a:"avais"},
-  {q:"Él (aller) ... au marché", a:"allait"},
-  {q:"Nosotros (finir) ... nos devoirs", a:"finissions"},
-  {q:"Vosotros (parler) ... souvent", a:"parliez"},
-  {q:"Ellos (prendre) ... le bus", a:"prenaient"},
-  {q:"Yo (faire) ... du sport", a:"faisais"},
-  {q:"Tú (venir) ... chez moi", a:"venais"},
-  {q:"Él (manger) ... des fruits", a:"mangeait"},
-  {q:"Nosotros (lire) ... un livre", a:"lisions"},
-  // 11-20
-  {q:"Vosotros (écrire) ... des lettres", a:"écriviez"},
-  {q:"Ellos (dire) ... la vérité", a:"disaient"},
-  {q:"Yo (pouvoir) ... chanter", a:"pouvais"},
-  {q:"Tú (vouloir) ... aider", a:"voulais"},
-  {q:"Él (savoir) ... tout", a:"savait"},
-  {q:"Nosotros (connaître) ... la ville", a:"connaissions"},
-  {q:"Vosotros (travailler) ... tard", a:"travailliez"},
-  {q:"Ellos (jouer) ... au foot", a:"jouaient"},
-  {q:"Yo (boire) ... du lait", a:"buvais"},
-  {q:"Tú (courir) ... vite", a:"courais"},
-  // 21-30
-  {q:"Él (choisir) ... un cadeau", a:"choisissait"},
-  {q:"Nosotros (ouvrir) ... la porte", a:"ouvrions"},
-  {q:"Vosotros (mettre) ... la table", a:"mettiez"},
-  {q:"Ellos (recevoir) ... des lettres", a:"recevaient"},
-  {q:"Yo (croire) ... en toi", a:"croyais"},
-  {q:"Tú (vivre) ... à Paris", a:"vivais"},
-  {q:"Él (attendre) ... le bus", a:"attendait"},
-  {q:"Nosotros (chanter) ... ensemble", a:"chantions"},
-  {q:"Vosotros (danser) ... au bal", a:"dansiez"},
-  {q:"Ellos (parvenir) ... à temps", a:"parvenaient"}
-];
-
-const questionsPerPage = 10;
-let currentPage = parseInt(localStorage.getItem('currentPage') || '0');
-let answers = JSON.parse(localStorage.getItem('answers') || '[]');
-
-// Inicializar array answers si vacío
-if (answers.length !== questions.length) {
-  answers = Array(questions.length).fill('');
-}
-
-// ==================== FUNCIONES ====================
-function renderPage() {
-  const quizDiv = document.getElementById('quiz');
-  quizDiv.innerHTML = '';
-  const startIndex = currentPage * questionsPerPage;
-  const endIndex = Math.min(startIndex + questionsPerPage, questions.length);
-
-  for (let i=startIndex; i<endIndex; i++) {
-    const qDiv = document.createElement('div');
-    qDiv.className='question';
-    qDiv.innerHTML = `
-      <p><strong>Pregunta ${i+1}:</strong> ${questions[i].q}</p>
-      <input type="text" data-index="${i}" value="${answers[i]}">
-    `;
-    quizDiv.appendChild(qDiv);
-  }
-  saveProgress();
-}
-
-function saveProgress(){
-  localStorage.setItem('answers', JSON.stringify(answers));
-  localStorage.setItem('currentPage', currentPage);
-}
-
-function checkScore(){
-  let correct=0;
-  let details='';
-  for (let i=0; i<questions.length; i++){
-    const user=answers[i].trim().toLowerCase();
-    const good=questions[i].a.toLowerCase();
-    if(user===good){correct++;}
-    else {
-      details+=`<p>Pregunta ${i+1}: Tu respuesta: <em>${user}</em>. Correcta: <strong>${good}</strong></p>`;
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Menú de Prácticas — Gramática Francesa</title>
+  <style>
+    :root{
+      --bg:#f4f7fb;--card:#ffffff;--accent:#0b66ff;--muted:#556679;--radius:14px;
+      --glass: rgba(255,255,255,0.7);
     }
-  }
-  const nota=(correct/questions.length*10).toFixed(2);
-  document.getElementById('score').innerHTML=
-    `Aciertos: ${correct}/${questions.length} — Nota: ${nota}/10<br>${details}`;
-}
+    [data-theme="dark"]{
+      --bg:#071022;--card:#0c1624;--accent:#4aa3ff;--muted:#9fb6d6;--glass: rgba(255,255,255,0.03);
+    }
+    *{box-sizing:border-box}
+    body{font-family:Inter, system-ui, -apple-system, 'Segoe UI', Roboto, Arial; margin:0;background:linear-gradient(180deg,var(--bg),#ffffff);color:var(--muted)}
+    .wrap{max-width:1100px;margin:28px auto;padding:24px}
+    header{display:flex;align-items:center;justify-content:space-between;gap:12px}
+    .brand{display:flex;align-items:center;gap:12px}
+    .logo{width:64px;height:64px;border-radius:12px;background:linear-gradient(135deg,var(--accent),#6ad1ff);display:flex;align-items:center;justify-content:center;color:white;font-weight:700;font-size:20px;box-shadow:0 6px 18px rgba(11,102,255,0.12)}
+    h1{font-size:1.4rem;margin:0}
+    p.lead{margin:4px 0 0;color:var(--muted);font-size:0.95rem}
 
-// ==================== EVENTOS ====================
-document.getElementById('quiz').addEventListener('input', (e)=>{
-  if(e.target.tagName==='INPUT'){
-    const idx=parseInt(e.target.dataset.index);
-    answers[idx]=e.target.value;
-    saveProgress();
-  }
-});
+    .controls{display:flex;gap:8px;align-items:center}
+    .btn{background:var(--accent);color:white;padding:8px 12px;border-radius:10px;border:none;cursor:pointer}
+    .btn.ghost{background:transparent;color:var(--accent);border:1px solid rgba(11,102,255,0.12)}
 
-document.getElementById('nextBtn').addEventListener('click', ()=>{
-  if((currentPage+1)*questionsPerPage<questions.length){
-    currentPage++;
-    renderPage();
-  }
-});
+    .menu-grid{display:grid;grid-template-columns:1fr 320px;gap:20px;margin-top:20px}
 
-document.getElementById('prevBtn').addEventListener('click', ()=>{
-  if(currentPage>0){
-    currentPage--;
-    renderPage();
-  }
-});
+    /* Left: tree */
+    .tree-card{background:var(--card);padding:18px;border-radius:var(--radius);box-shadow:0 6px 20px rgba(2,6,23,0.06)}
+    .tree{list-style:none;padding:0;margin:0}
+    .theme{padding:10px;border-radius:10px;margin-bottom:10px;border:1px solid rgba(11,102,255,0.06);cursor:pointer}
+    .theme h3{margin:0;font-size:1rem}
+    .subthemes{padding-left:12px;margin-top:8px}
+    .sub{display:flex;align-items:center;justify-content:space-between;padding:8px;border-radius:8px}
+    .practice-list{display:flex;flex-direction:column;gap:8px;margin-top:8px}
+    .practice{display:flex;align-items:center;gap:10px;padding:8px;border-radius:8px;background:var(--glass)}
+    .practice small{color:var(--muted)}
 
-document.getElementById('checkBtn').addEventListener('click', checkScore);
+    /* Elimina la sección de preview */
+    /* .preview{background:var(--card);padding:18px;border-radius:var(--radius);box-shadow:0 6px 20px rgba(2,6,23,0.06)}
+    .preview h3{margin-top:0}
+    .preview p{color:var(--muted)}
+    .open-btns{display:flex;gap:8px;margin-top:12px}
+    .open-btns a{flex:1;text-decoration:none} */
 
-document.getElementById('refreshBtn').addEventListener('click', ()=>{
-  if(confirm("¿Seguro que deseas reiniciar la práctica?")){
-    localStorage.removeItem('answers');
-    localStorage.removeItem('currentPage');
-    answers=Array(questions.length).fill('');
-    currentPage=0;
-    renderPage();
-    document.getElementById('score').innerHTML='';
-  }
-});
+    footer{margin-top:18px;color:var(--muted);font-size:0.9rem;text-align:center}
 
-// ==================== INICIO ====================
-renderPage();
+    /* responsive */
+    @media (max-width:800px){.menu-grid{grid-template-columns:1fr;}.brand .logo{width:48px;height:48px}}
+  </style>
+</head>
+<body data-theme="light">
+  <div class="wrap">
+    <header>
+      <div class="brand">
+        <div class="logo">FR</div>
+        <div>
+          <h1>Menú de prácticas — Gramática francesa</h1>
+          <p class="lead">Selecciona tema → subtema → práctica. Cada práctica abre en su propio archivo HTML.</p>
+        </div>
+      </div>
 
-</script>
+      <div class="controls">
+        <button class="btn" id="toggleTheme">Modo oscuro</button>
+      </div>
+    </header>
+
+    <main class="menu-grid">
+      <section class="tree-card">
+        <ul class="tree">
+
+          <li class="theme" data-theme-name="Gramática">
+            <h3>Gramática</h3>
+            <div class="subthemes">
+              <div class="sub" data-subname="Tiempos verbales">
+                <div>
+                  <strong>Tiempos verbales</strong>
+                  <div style="font-size:0.82rem;color:var(--muted)">Prácticas de imperfecto y passé composé</div>
+                </div>
+                <div class="practice-list">
+                 
+                  <div class="practice" data-file="VerbosImperfectos.html" data-title="Imperfecto — 42 preguntas paginado" data-desc="Práctica paginada, 42 preguntas, 10 por página">Imparfait (42)</div>
+                  <div class="practice" data-file="PasseComposse2-3.html" data-title="Passé composé — 30 preguntas" data-desc="Práctica de passé composé para 2º y 3º grupo">Passé composé (30)</div>
+                 
+                </div>
+              </div>  
+              </div>
+            </div>
+          </li>
+        </ul>
+      </section>
+    </main>
+
+    <footer>By fastreds </footer>
+  </div>
+
+  <script>
+    const toggle = document.getElementById('toggleTheme');
+
+    // Theme toggle
+    let theme = localStorage.getItem('site_theme') || 'light';
+    document.body.setAttribute('data-theme', theme);
+    toggle.textContent = theme==='light' ? 'Modo oscuro' : 'Modo claro';
+    toggle.addEventListener('click', ()=>{
+      theme = theme==='light'?'dark':'light';
+      document.body.setAttribute('data-theme', theme);
+      localStorage.setItem('site_theme', theme);
+      toggle.textContent = theme==='light' ? 'Modo oscuro' : 'Modo claro';
+    });
+
+    // Ir a la práctica al dar click en el tema
+    document.querySelectorAll('.theme').forEach(themeEl=>{
+      themeEl.addEventListener('click', ()=>{
+        const firstPractice = themeEl.querySelector('.practice');
+        if(firstPractice){
+          window.location.href = firstPractice.dataset.file;
+        }
+      });
+    });
+
+    // Ir a la práctica al dar click en el subtema
+    document.querySelectorAll('.sub').forEach(subEl=>{
+      subEl.addEventListener('click', (e)=>{
+        // Evita doble navegación si se hace click en la práctica
+        if(e.target.classList.contains('practice')) return;
+        const firstPractice = subEl.querySelector('.practice');
+        if(firstPractice){
+          window.location.href = firstPractice.dataset.file;
+        }
+      });
+    });
+
+    // Ir a la práctica al dar click en la práctica
+    document.querySelectorAll('.practice').forEach(el=>{
+      el.addEventListener('click', ()=>{
+        window.location.href = el.dataset.file;
+      });
+    });
+  </script>
 </body>
 </html>
