--- a/PasseComposse2-3.html
+++ b/PasseComposse2-3.html
@@ -178,3 +178,16 @@ renderPage();
 </script>
 </body>
 </html>
+<!-- Botón para volver al menú principal -->
+<div style="margin:20px 0;">
+  <a href="index.html" style="
+    display:inline-block;
+    padding:10px 20px;
+    background:#4CAF50;
+    color:#fff;
+    text-decoration:none;
+    border-radius:8px;
+    font-weight:bold;">
+    ⬅️ Volver al menú principal
+  </a>
+</div>
