--- a/index.html
+++ b/index.html
@@ -27,27 +27,23 @@
 
     .menu-grid{display:grid;grid-template-columns:1fr 320px;gap:20px;margin-top:20px}
 
-    /* Left: tree */
     .tree-card{background:var(--card);padding:18px;border-radius:var(--radius);box-shadow:0 6px 20px rgba(2,6,23,0.06)}
     .tree{list-style:none;padding:0;margin:0}
-    .theme{padding:10px;border-radius:10px;margin-bottom:10px;border:1px solid rgba(11,102,255,0.06);cursor:pointer}
+    .theme{padding:10px;border-radius:10px;margin-bottom:10px;border:1px solid rgba(11,102,255,0.06);cursor:pointer;transition:background 0.2s;}
+    .theme.active, .theme:hover{background:var(--glass);}
     .theme h3{margin:0;font-size:1rem}
-    .subthemes{padding-left:12px;margin-top:8px}
-    .sub{display:flex;align-items:center;justify-content:space-between;padding:8px;border-radius:8px}
-    .practice-list{display:flex;flex-direction:column;gap:8px;margin-top:8px}
-    .practice{display:flex;align-items:center;gap:10px;padding:8px;border-radius:8px;background:var(--glass)}
+    .subthemes{padding-left:12px;margin-top:8px;display:none;}
+    .subthemes.active{display:block;}
+    .sub{display:flex;align-items:center;justify-content:space-between;padding:8px;border-radius:8px;cursor:pointer;transition:background 0.2s;}
+    .sub.active, .sub:hover{background:var(--glass);}
+    .practice-list{display:flex;flex-direction:column;gap:8px;margin-top:8px;display:none;}
+    .practice-list.active{display:flex;}
+    .practice{display:flex;align-items:center;gap:10px;padding:8px;border-radius:8px;background:var(--glass);cursor:pointer;transition:background 0.2s;}
+    .practice:hover{background:rgba(11,102,255,0.12);}
     .practice small{color:var(--muted)}
-
-    /* Elimina la sección de preview */
-    /* .preview{background:var(--card);padding:18px;border-radius:var(--radius);box-shadow:0 6px 20px rgba(2,6,23,0.06)}
-    .preview h3{margin-top:0}
-    .preview p{color:var(--muted)}
-    .open-btns{display:flex;gap:8px;margin-top:12px}
-    .open-btns a{flex:1;text-decoration:none} */
 
     footer{margin-top:18px;color:var(--muted);font-size:0.9rem;text-align:center}
 
-    /* responsive */
     @media (max-width:800px){.menu-grid{grid-template-columns:1fr;}.brand .logo{width:48px;height:48px}}
   </style>
 </head>
@@ -58,10 +54,9 @@
         <div class="logo">FR</div>
         <div>
           <h1>Menú de prácticas — Gramática francesa</h1>
-          <p class="lead">Selecciona tema → subtema → práctica. Cada práctica abre en su propio archivo HTML.</p>
+          <p class="lead">Selecciona tema, subtema y luego la práctica que desees.</p>
         </div>
       </div>
-
       <div class="controls">
         <button class="btn" id="toggleTheme">Modo oscuro</button>
       </div>
@@ -70,22 +65,18 @@
     <main class="menu-grid">
       <section class="tree-card">
         <ul class="tree">
-
-          <li class="theme" data-theme-name="Gramática">
+          <li class="theme active" data-theme-name="Gramática">
             <h3>Gramática</h3>
-            <div class="subthemes">
-              <div class="sub" data-subname="Tiempos verbales">
+            <div class="subthemes active">
+              <div class="sub active" data-subname="Tiempos verbales">
                 <div>
                   <strong>Tiempos verbales</strong>
                   <div style="font-size:0.82rem;color:var(--muted)">Prácticas de imperfecto y passé composé</div>
                 </div>
-                <div class="practice-list">
-                 
+                <div class="practice-list active">
                   <div class="practice" data-file="VerbosImperfectos.html" data-title="Imperfecto — 42 preguntas paginado" data-desc="Práctica paginada, 42 preguntas, 10 por página">Imparfait (42)</div>
                   <div class="practice" data-file="PasseComposse2-3.html" data-title="Passé composé — 30 preguntas" data-desc="Práctica de passé composé para 2º y 3º grupo">Passé composé (30)</div>
-                 
                 </div>
-              </div>  
               </div>
             </div>
           </li>
@@ -98,8 +89,6 @@
 
   <script>
     const toggle = document.getElementById('toggleTheme');
-
-    // Theme toggle
     let theme = localStorage.getItem('site_theme') || 'light';
     document.body.setAttribute('data-theme', theme);
     toggle.textContent = theme==='light' ? 'Modo oscuro' : 'Modo claro';
@@ -110,25 +99,27 @@
       toggle.textContent = theme==='light' ? 'Modo oscuro' : 'Modo claro';
     });
 
-    // Ir a la práctica al dar click en el tema
+    // Rediseño: despliega subtemas al hacer click en tema
     document.querySelectorAll('.theme').forEach(themeEl=>{
-      themeEl.addEventListener('click', ()=>{
-        const firstPractice = themeEl.querySelector('.practice');
-        if(firstPractice){
-          window.location.href = firstPractice.dataset.file;
-        }
+      themeEl.addEventListener('click', (e)=>{
+        document.querySelectorAll('.theme').forEach(t=>t.classList.remove('active'));
+        document.querySelectorAll('.subthemes').forEach(st=>st.classList.remove('active'));
+        themeEl.classList.add('active');
+        const subthemes = themeEl.querySelector('.subthemes');
+        if(subthemes) subthemes.classList.add('active');
+        e.stopPropagation();
       });
     });
 
-    // Ir a la práctica al dar click en el subtema
+    // Despliega prácticas al hacer click en subtema
     document.querySelectorAll('.sub').forEach(subEl=>{
       subEl.addEventListener('click', (e)=>{
-        // Evita doble navegación si se hace click en la práctica
-        if(e.target.classList.contains('practice')) return;
-        const firstPractice = subEl.querySelector('.practice');
-        if(firstPractice){
-          window.location.href = firstPractice.dataset.file;
-        }
+        document.querySelectorAll('.sub').forEach(s=>s.classList.remove('active'));
+        document.querySelectorAll('.practice-list').forEach(pl=>pl.classList.remove('active'));
+        subEl.classList.add('active');
+        const plist = subEl.querySelector('.practice-list');
+        if(plist) plist.classList.add('active');
+        e.stopPropagation();
       });
     });
 
